--- a/index.html
+++ b/index.html
@@ -3,40 +3,56 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aura Essence Perfumes - Home</title>
+    <title>Aura Essence Perfumes - Bold Retro Luxury</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-    <header>
-        <div class="logo">Aura Essence</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="products.html">Perfumes</a>
-            <a href="payments.html">Payments</a>
-            <a href="thankyou.html">Thank You</a>
+<body class="wine-bg">
+    <!-- HEADER -->
+    <header class="header retro-shadow dark-brown-bg">
+        <div class="logo gold-text">AURA ESSENCE</div>
+        <nav class="nav">
+            <a href="index.html" class="gold-text">Home</a>
+            <a href="products.html" class="gold-text">Perfumes</a>
+            <a href="payments.html" class="gold-text">Payments</a>
+            <a href="thankyou.html" class="gold-text">Thank You</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Aura Essence Perfumes</h1>
-        <p>Where Vintage Meets Modern Luxury</p>
-        <button onclick="location.href='products.html'">Browse Perfumes</button>
-        <button onclick="location.href='payments.html'">Book Now</button>
+    <!-- HERO SECTION -->
+    <section class="hero wine-gradient">
+        <div class="hero-content">
+            <h1 class="hero-title gold-text">Aura Essence Perfumes</h1>
+            <p class="hero-subtitle">Where Vintage Luxury Meets Modern Elegance</p>
+            <div class="hero-buttons">
+                <a href="products.html" class="btn-gold">Browse Perfumes</a>
+                <a href="payments.html" class="btn-outline">Book Now</a>
+            </div>
+        </div>
     </section>
 
-    <section class="features">
-        <h2>Our Signature Fragrances</h2>
-        <ul>
-            <li>Vintage Rosewood</li>
-            <li>Golden Amber</li>
-            <li>Retro Vanilla Mist</li>
-            <li>Royal Oud Essence</li>
-            <li>Classic Lavender Bloom</li>
-        </ul>
+    <!-- FEATURES SECTION -->
+    <section class="features-section dark-brown-bg retro-shadow">
+        <h2 class="section-title gold-text">Our Signature Fragrances</h2>
+        <div class="features-grid">
+            <div class="feature-card wine-bg-light">
+                <h3 class="gold-text">Vintage Rose</h3>
+                <p>Classic floral notes blended with warm retro elegance.</p>
+            </div>
+            <div class="feature-card wine-bg-light">
+                <h3 class="gold-text">Mystic Oud</h3>
+                <p>Deep Arabian oud with smoky vintage charm.</p>
+            </div>
+            <div class="feature-card wine-bg-light">
+                <h3 class="gold-text">Golden Amber</h3>
+                <p>Rich amber tones paired with golden musk warmth.</p>
+            </div>
+        </div>
     </section>
 
-    <footer>
+    <!-- FOOTER -->
+    <footer class="footer dark-brown-bg gold-text">
         <p>Contact: info@auraessence.com • Instagram: @auraessenceperfumes</p>
+        <p>© 2025 Aura Essence. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
