--- a/products.html
+++ b/products.html
@@ -3,76 +3,75 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aura Essence Perfumes - Products</title>
+    <title>Aura Essence Perfumes • Products</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="main.js" defer></script>
 </head>
-<body>
-    <header>
+<body class="products-page">
+    <!-- HEADER -->
+    <header class="header">
         <div class="logo">Aura Essence</div>
-        <nav>
+        <nav class="navbar">
             <a href="index.html">Home</a>
-            <a href="products.html">Perfumes</a>
+            <a href="products.html" class="active">Perfumes</a>
             <a href="payments.html">Payments</a>
             <a href="thankyou.html">Thank You</a>
         </nav>
     </header>
 
-    <section class="product-grid">
-        <h2>Our Perfume Collection</h2>
-        <div class="grid">
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="Aurora Classic Edition" />
-                <h3>Aurora Classic Edition</h3>
-                <p>₹1,299</p>
-                <button onclick="addToCart('Aurora Classic Edition',1299)">Add to Cart</button>
-                <button onclick="location.href='payments.html'">Book Now</button>
+    <!-- HERO BANNER -->
+    <section class="hero hero-products">
+        <h1 class="hero-title">Timeless Fragrances</h1>
+        <p class="hero-sub">Discover our Classic & Luxury Perfume Collection</p>
+    </section>
+
+    <!-- PRODUCT GRID -->
+    <section class="products-section">
+        <h2 class="section-title gold-text">Our Perfume Collection</h2>
+
+        <div class="product-grid">
+            <!-- Perfume 1 -->
+            <div class="product-card">
+                <img src="https://images.unsplash.com/photo-1519741497674-611481863552" class="product-img" />
+                <h3 class="product-name">Aurora Classic Edition</h3>
+                <p class="product-price">₹2,499</p>
+                <button class="btn add-cart" data-name="Aurora Classic Edition" data-price="2499">Add to Cart</button>
+                <a href="payments.html" class="btn book-now">Book Now</a>
             </div>
 
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="Vintage Royal Oud" />
-                <h3>Vintage Royal Oud</h3>
-                <p>₹1,599</p>
-                <button onclick="addToCart('Vintage Royal Oud',1599)">Add to Cart</button>
-                <button onclick="location.href='payments.html'">Book Now</button>
+            <!-- Perfume 2 -->
+            <div class="product-card">
+                <img src="https://images.unsplash.com/photo-1590152566951-06d2f444d76d" class="product-img" />
+                <h3 class="product-name">Opulence Royale</h3>
+                <p class="product-price">₹3,299</p>
+                <button class="btn add-cart" data-name="Opulence Royale" data-price="3299">Add to Cart</button>
+                <a href="payments.html" class="btn book-now">Book Now</a>
             </div>
 
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="Retro Velvet Musk" />
-                <h3>Retro Velvet Musk</h3>
-                <p>₹999</p>
-                <button onclick="addToCart('Retro Velvet Musk',999)">Add to Cart</button>
-                <button onclick="location.href='payments.html'">Book Now</button>
+            <!-- Perfume 3 -->
+            <div class="product-card">
+                <img src="https://images.unsplash.com/photo-1585386959984-a4155224a1ad" class="product-img" />
+                <h3 class="product-name">Vintage Mist Gold</h3>
+                <p class="product-price">₹2,899</p>
+                <button class="btn add-cart" data-name="Vintage Mist Gold" data-price="2899">Add to Cart</button>
+                <a href="payments.html" class="btn book-now">Book Now</a>
             </div>
 
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="Amber Bloom Essence" />
-                <h3>Amber Bloom Essence</h3>
-                <p>₹1,249</p>
-                <button onclick="addToCart('Amber Bloom Essence',1249)">Add to Cart</button>
-                <button onclick="location.href='payments.html'">Book Now</button>
-            </div>
-
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="Royal Night Musk" />
-                <h3>Royal Night Musk</h3>
-                <p>₹1,899</p>
-                <button onclick="addToCart('Royal Night Musk',1899)">Add to Cart</button>
-                <button onclick="location.href='payments.html'">Book Now</button>
-            </div>
-
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="Lavender Mist Retro" />
-                <h3>Lavender Mist Retro</h3>
-                <p>₹1,050</p>
-                <button onclick="addToCart('Lavender Mist Retro',1050)">Add to Cart</button>
-                <button onclick="location.href='payments.html'">Book Now</button>
+            <!-- Perfume 4 -->
+            <div class="product-card">
+                <img src="https://images.unsplash.com/photo-1594035910374-dbbd39d4bc90" class="product-img" />
+                <h3 class="product-name">Royal Noir Intense</h3>
+                <p class="product-price">₹3,799</p>
+                <button class="btn add-cart" data-name="Royal Noir Intense" data-price="3799">Add to Cart</button>
+                <a href="payments.html" class="btn book-now">Book Now</a>
             </div>
         </div>
     </section>
 
-    <footer>
-        <p>Contact: info@auraessence.com • Instagram: @auraessenceperfumes</p>
+    <!-- FOOTER -->
+    <footer class="footer">
+        <p>© 2025 Aura Essence Perfumes. All Rights Reserved.</p>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
